update to 1.21
Forge and NeoForge builds may be broken